--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,17 @@
 cachetools==4.0.0
+certifi==2019.11.28
+chardet==3.0.4
 google-api-python-client==1.7.11
 google-auth==1.11.2
 google-auth-httplib2==0.0.3
 httplib2==0.17.0
+idna==2.9
 oauth2client==4.1.3
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
 python-dotenv==0.12.0
+requests==2.23.0
 rsa==4.0
 six==1.14.0
 uritemplate==3.0.1
+urllib3==1.25.8
